<resources>
    <string name="app_name">UniGram</string>

    <string name="open_album">Open Album</string>
    <string name="grant_permission">Grant Permission</string>

    <string name="permission_not_granted_media_store">App requires access to storage to access items stored in MediaStore.</string>

    <string name="title_feed">Feed</string>
    <string name="title_explore">Explore</string>
    <string name="title_post">Post</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="image_to_post_description">Image to post</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="sign_up">Sign Up</string>
    <string name="selected_image_description">Selected image to post description</string>
    <string name="empty_gallery">Your Gallery is Empty</string>
    <string name="empty_gallery_suggestion">Take a photo to fill your gallery</string>
    <string name="empty_gallery_icon_description">Empty Gallery Icon</string>

    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="permission_denied">Permissions not granted by the user.</string>
    <string name="title_take_photo">Take A Photo</string>
    <string name="unigram">Unigram</string>
    <string name="test">Test</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_in">Log in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="description">Description</string>
    <string name="take_picture">Take Picture</string>
    <string name="post_image">Post image</string>
    <string name="submit">Submit</string>
    <string name="feed">Feed</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="instagram_landing_logo">Instagram Landing Logo</string>
    <string name="capture_image">Capture image</string>
    <string name="direct_message">Direct message</string>
    <string name="inbox">Inbox</string>
    <string name="action_register">Register</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="report">Report</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="edit_profile">Edit profile</string>
    <string name="_0">0</string>
    <string name="like">Like</string>

    <plurals name="numberOfLikes">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
</resources>