<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_feed">

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.codepath_group16.unigram.ui.feed.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.codepath_group16.unigram.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_post"
        android:name="com.codepath_group16.unigram.ui.post.PostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_post">
        <action
            android:id="@+id/action_navigation_post_to_captureImageFragment"
            app:destination="@id/navigation_capture_image"
            app:popUpTo="@id/navigation_post" />
        <action
            android:id="@+id/action_navigation_post_to_navigation_complete_post"
            app:destination="@id/navigation_complete_post" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.codepath_group16.unigram.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_capture_image"
        android:name="com.codepath_group16.unigram.ui.post.CaptureImageFragment"
        android:label="@string/title_take_photo"
        tools:layout="@layout/fragment_capture_image">
        <action
            android:id="@+id/action_navigation_capture_image_to_navigation_image_preview"
            app:destination="@id/navigation_image_preview"
            app:popUpTo="@id/navigation_capture_image" />
    </fragment>

    <fragment
        android:id="@+id/navigation_complete_post"
        android:name="com.codepath_group16.unigram.ui.post.CompletePostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_complete_post">
        <action
            android:id="@+id/action_navigation_complete_post_to_navigation_feed"
            app:destination="@id/navigation_feed" />
        <argument
            android:name="ImageUri"
            app:argType="android.net.Uri" />
    </fragment>

    <fragment
        android:id="@+id/navigation_image_preview"
        android:name="com.codepath_group16.unigram.ui.post.ImagePreviewFragment"
        android:label="@string/title_preview_image"
        tools:layout="@layout/fragment_image_preview">
        <action
            android:id="@+id/action_navigation_image_preview_to_navigation_capture_image"
            app:destination="@id/navigation_capture_image"
            app:popUpTo="@id/navigation_post" />
        <action
            android:id="@+id/action_navigation_image_preview_to_navigation_complete_post"
            app:destination="@id/navigation_complete_post" />
        <argument
            android:name="imageUri"
            app:argType="android.net.Uri" />
    </fragment>

</navigation>